manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-node-ingress
spec:
  rules:
  - host: gmt.nodetest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-node-service
          servicePort: 3000
